# gio-dbus-cpp

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build.yaml  codeql.yaml  lint.yaml  pvs-studio.yaml
include/gio-dbus-c++/: common.hpp  connection-type.hpp  connection.hpp  context-job.hpp  context-type.hpp  context.hpp  error.hpp  gio-dbus-c++.hpp  gio-types.hpp  message.hpp  object-path.hpp  proxy.hpp  signature.hpp  subscription.hpp  timeout.hpp  unix-fd.hpp  variant.hpp
include/gio-dbus-c++/details/: compile-time-string.hpp  dbus-deserializer.hpp  dbus-serializer.hpp  dbus-type-deserializer.hpp  dbus-type-serializer.hpp  dbus-type-traits.hpp  exception.hpp  lazy-pimpl.hpp  pimpl.hpp  type-traits.hpp
samples/: meson.build  proxy.cpp
scripts/: lint-all.sh  lint-clang-format.sh  lint-clang-tidy.sh  lint-extra.sh  lint-pvs-studio.sh
sources/: connection.cpp  context-job.cpp  context.cpp  error.cpp  meson.build  object-path.cpp  proxy.cpp  signature.cpp  subscription.cpp  timeout.cpp  unix-fd.cpp
